--- a/deploy/dev-ol/devops-sample.yaml
+++ b/deploy/dev-ol/devops-sample.yaml
@@ -28,7 +28,7 @@ spec:
               value: js|html
             - name: CACHE_PUBLIC_EXPIRATION
               value: 3d
-        - image: $REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:$TAG_NAME
+          image: $REGISTRY/$HARBOR_NAMESPACE/$APP_NAME:SNAPSHOT-$BUILD_NUMBER
           readinessProbe:
             httpGet:
               path: /
