--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,10 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <groupId>org.springframework.boot</groupId>
+                        <!-- <groupId>org.jacoco</groupId> -->
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <!-- <artifactId>jacoco-maven-plugin</artifactId> -->
                         <executions>
                             <execution>
                                 <id>prepare-agent</id>
