--- a/pom.xml
+++ b/pom.xml
@@ -82,9 +82,7 @@
                 <plugins>
                     <plugin>
                         <groupId>org.jacoco</groupId>
-                        <!-- <groupId>org.springframework.boot</groupId> -->
-                        <artifactId>spring-boot-maven-plugin</artifactId>
-                        <!-- <artifactId>jacoco-maven-plugin</artifactId> -->
+                        <artifactId>jacoco-maven-plugin</artifactId>
                         <executions>
                             <execution>
                                 <id>prepare-agent</id>
